# particular-purl-parse

./: .gitignore  README.md
.github/workflows/: publish.yml  python.yml
py/: .coverage  .coveragerc  DEVELOP.md  Makefile  README.md  conftest.py  index.py  pyproject.toml  quick_test.py  requirements.txt  setup.py  test_runner.py  test_simple.py  tox.ini
py/particular_purl_parse/: __init__.py  core.py
py/src/particular_purl_parse/: __init__.py  core.py
py/tests/: test_core.py  test_integration.py
ts/: .eslintrc.js  README.md  package.json
ts/src/: index.ts
ts/src/__tests__/: index.test.ts
