[project]
name = "particular-purl-parse"
version = "0.1.0"
description = "A library for parsing PackageURL (PURL) strings and extracting component information"
readme = "README.md"
authors = [
    { name = "James Reichard", email = "jreichar@redhat.com" },
    { name = "Alvaro Tinoco", email = "atinocom@redhat.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "packageurl-python>=0.17.5",
]
keywords = ["purl", "packageurl", "parsing", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
[project.urls]
Homepage = "https://github.com/RedHatProductSecurity/particular-purl-parse"
Repository = "https://github.com/RedHatProductSecurity/particular-purl-parse"
Documentation = "https://github.com/RedHatProductSecurity/particular-purl-parse#readme"
"Bug Tracker" = "https://github.com/RedHatProductSecurity/particular-purl-parse/issues"


[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
    "tox>=4.30.2",
    "tox-uv>=1.28.0",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov-config=.coveragerc",
    "--cov=particular_purl_parse",
    "--cov-report=term",
    "--strict-config",
    "-ra",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
